kubernetes/django_deployment.yaml
# django_deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: stop.kr.ncr.ntruss.com/oz-collabo-repo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: static-volume
          mountPath: /app/src/static
        - name: media-volume
          mountPath: /app/src/media
      volumes:
      - name: static-volume
        emptyDir: {}
      - name: media-volume
        emptyDir: {}
      imagePullSecrets:
        - name: amuguna
