kubernetes/nginx_deployment.yaml
# nginx_deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: static-volume
          mountPath: /app/src/static
        - name: media-volume
          mountPath: /app/src/media
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: static-volume
        emptyDir: {}
      - name: media-volume
        emptyDir: {}
