kubernetes/django_service.yaml
# django_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: default
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
