kubernetes/postgres_service.yaml
# postgres_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
