kubernetes/nginx_ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - so-new-wedding.store
    secretName: tls-secret
  rules:
  - host: so-new-wedding.store
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
